--- a/JavaScript/day09/通讯录综合案例素材/通讯录案例.html
+++ b/JavaScript/day09/通讯录综合案例素材/通讯录案例.html
@@ -202,6 +202,8 @@
       const items = document.querySelectorAll('.item')
 
       //添加手势事件：引入js文件、添加方法
+      //AlloyFinger:new AlloyFinger(element,{
+      // swipe:function(e){滑动的时候要做的事情e.direction可以判断上下左右滑动Left Right等}  })
       items.forEach(function(ele){
         new AlloyFinger(ele,{
           swipe:function(e){
